# ComicViewer

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml  plan.md
backend/: .gitignore  Dockerfile.backend  Makefile  pyproject.toml  requirements.txt
backend/app/: auth.py  crud.py  database.py  main.py  models.py  schemas.py  utils.py
frontend/: Dockerfile.frontend  package.json  svelte.config.js  vite.config.js
frontend/src/lib/: api.ts
frontend/src/routes/: +layout.svelte  +page.svelte  Header.svelte
frontend/src/routes/about/: +page.svelte
frontend/src/routes/comic/[id]/: +page.svelte
qtapp/: Dockerfile  Makefile  comic_viewer.py  docker-compose.yml  requirements.txt
