[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Jose Alonzo",email = "pepemxl@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.121.3,<0.122.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "rarfile (>=4.2,<5.0)",
    "unrar (>=0.4,<0.5)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "cryptography (>=46.0.3,<47.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "backend", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
